PROJECT(itktud)

OPTION(BUILD_WRAPPERS "Wrap library" OFF)
OPTION(INSTALL_DEVEL_FILES "Install C++ headers" ON)

FIND_PACKAGE(ITK REQUIRED)

INCLUDE_DIRECTORIES(${ITK_INCLUDE_DIRS} ${itktud_SOURCE_DIR}/src)
LINK_DIRECTORIES(${ITK_LIBRARY_DIRS})

IF(BUILD_WRAPPERS)
   SUBDIRS(Wrapping)
ENDIF(BUILD_WRAPPERS)

# install devel files
IF(INSTALL_DEVEL_FILES)
  FOREACH(f itkTPGACLevelSetImageFilter.h itkTPGACLevelSetImageFilter.txx)
    INSTALL_FILES(/include/InsightToolkit/Algorithms FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/${f})
  ENDFOREACH(f)
ENDIF(INSTALL_DEVEL_FILES)

ENABLE_TESTING()
